--- a/meilisearch-http/public/interface.html
+++ b/meilisearch-http/public/interface.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/bulma.min.css">
-    <title>MeiliSearch</title>
+    <title>dAppBox Search</title>
     <style>
       em {
         color: hsl(204, 86%, 25%);
@@ -88,10 +88,10 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Welcome to MeiliSearch
+            dAppBox Search
           </h1>
           <h2 class="subtitle">
-            This dashboard will help you check the search results with ease.
+            Search in dappbox documents
           </h2>
         </div>
       </div>
