Change the page index texts

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/bulma.min.css">
     <script type="text/javascript" src="/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/papaparse.min.js"></script>
-    <title>The daugt</title>
+    <title>The mega-mini-indexer</title>
     <style>
       em {
         color: hsl(204, 86%, 25%);
@@ -90,7 +90,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Welcome to daugt
+            Welcome to the mega-mini-indexer also known as the MMI
           </h1>
           <h2 class="subtitle">
             This dashboard will help you check the search results with ease.
