Add an help message on the front page
aaa

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
           <h2 class="subtitle">
             This dashboard will help you check the search results with ease.
           </h2>
+          <p>Quoted query strings are available and forces the engine to search without typo tolerance or prefixes (e.g. <code>big "black" boat</code>).</p>
         </div>
       </div>
     </section>
@@ -117,7 +118,7 @@
               <div class="level-item has-text-centered">
                 <div>
                   <p class="heading">Documents</p>
-                  <p id="count" class="title">25</p>
+                  <p id="count" class="title">20</p>
                 </div>
               </div>
               <div class="level-item has-text-centered">
