Add facet filtering to the development dashboard

--- a/meilisearch-http/public/interface.html
+++ b/meilisearch-http/public/interface.html
@@ -81,6 +81,14 @@
         color: rgba(0,0,0,.9);
         overflow-wrap: break-word;
       }
+
+      .checkbox {
+          margin-right: 0.2em;
+      }
+
+      input[type="checkbox"] {
+          margin: 0.1em;
+      }
     </style>
   </head>
   <body>
@@ -151,6 +159,10 @@
         </div>
     </section>
 
+    <section class="container">
+        <div id="facets" class="column"></div>
+    </section>
+
     <section>
       <ol id="results" class="content">
         <!-- documents matching resquests -->
@@ -198,12 +210,39 @@
 
     let lastRequest = undefined;
 
+    var facetFilters = {};
+
+    function filterChange(ev, facet, facetValue) {
+        if (ev.target.checked) {
+            facetFilters[facet][facetValue] = true;
+        } else {
+            delete facetFilters[facet][facetValue];
+        }
+        triggerSearch();
+    }
+
+    // To make this demo more intuitive, facets are all ANDed with each other
+    function gatherMeiliFacetFilters() {
+        let filter = [];
+        for (const facet in facetFilters) {
+            for (const facetValue in facetFilters[facet]) {
+                filter.push(`${facet}:${facetValue}`);
+            }
+        }
+        return filter;
+    }
+
     function triggerSearch() {
         var e = document.getElementById("index");
         if (e.selectedIndex == -1) { return }
         var index = e.options[e.selectedIndex].value;
 
-        let theUrl = `${baseUrl}/indexes/${index}/search?q=${encodeURIComponent(search.value)}&attributesToHighlight=*`;
+        let qQs = `q=${encodeURIComponent(search.value)}&`;
+        let attributesToHighlightQs = `attributesToHighlight=*&`;
+        let facetsDistributionQs = `facetsDistribution=${encodeURIComponent('["*"]')}&`;
+        let meiliFacetFilters = gatherMeiliFacetFilters();
+        let meiliFacetFiltersQs = meiliFacetFilters.length === 0 ? '' : `facetFilters=${encodeURIComponent(JSON.stringify(meiliFacetFilters))}&`;
+        let theUrl = `${baseUrl}/indexes/${index}/search?${qQs}${attributesToHighlightQs}${facetsDistributionQs}${meiliFacetFiltersQs}`;
 
         if (lastRequest) { lastRequest.abort() }
         lastRequest = new XMLHttpRequest();
@@ -218,14 +257,77 @@
             if (lastRequest.readyState === 4 && lastRequest.status === 200) {
                 let sanitizedResponseText = sanitizeHTMLEntities(lastRequest.responseText);
                 let httpResults = JSON.parse(sanitizedResponseText);
+                let facetsDistribution = httpResults.facetsDistribution;
                 results.innerHTML = '';
+                facets.innerHTML = '';
 
                 let processingTimeMs = httpResults.processingTimeMs;
                 let numberOfDocuments = httpResults.nbHits;
                 time.innerHTML = `${processingTimeMs}ms`;
                 count.innerHTML = `${numberOfDocuments}`;
 
-                for (result of httpResults.hits) {
+                let facetNames = Object.keys(facetsDistribution);
+                facetNames.sort();
+                for (const facet of facetNames) {
+                    function facetValueSort(elt1, elt2) {
+                        // Selected facets first
+                        if (!!facetFilters[facet][elt1.value] && !facetFilters[facet][elt2.value]) { return -1; }
+                        if (!facetFilters[facet][elt1.value] && !!facetFilters[facet][elt2.value]) { return 1; }
+                        // Descending count
+                        if (elt1.count > elt2.count) { return -1; }
+                        if (elt1.count < elt2.count) { return 1; }
+                        // Ascending name
+                        if (elt1.value < elt2.value) { return -1; }
+                        if (elt1.value > elt2.value) { return 1; }
+                        return 0;
+                    }
+                    if (facetFilters[facet] === undefined) {
+                        facetFilters[facet] = {};
+                    }
+                    let facetList = [];
+                    for (const facetValue in facetsDistribution[facet]) {
+                        let count = facetsDistribution[facet][facetValue];
+                        if (count === 0 && !facetFilters[facet][facetValue]) {
+                            continue;
+                        }
+                        facetList.push({ value: facetValue, count });
+                    }
+                    if (facetList.length === 0) {
+                        continue;
+                    }
+                    facetList.sort(facetValueSort);
+
+                    const field = document.createElement('div');
+                    field.classList.add('field');
+                    field.classList.add('is-horizontal');
+                    const fieldLabel = document.createElement('div');
+                    fieldLabel.classList.add('field-label');
+                    const label = document.createElement('label');
+                    label.classList.add('label');
+                    label.textContent = facet;
+                    fieldLabel.appendChild(label);
+                    field.appendChild(fieldLabel);
+                    const fieldBody = document.createElement('div');
+                    fieldBody.classList.add('field-body');
+                    const control = document.createElement('div');
+                    control.classList.add('control');
+                    facetList.forEach((e) => {
+                        const child = document.createElement('label');
+                        child.classList.add('checkbox');
+                        const checkbox = document.createElement('input');
+                        checkbox.type = 'checkbox';
+                        checkbox.onchange = (ev) => filterChange(ev, facet, e.value);
+                        checkbox.checked = !!facetFilters[facet][e.value];
+                        child.appendChild(checkbox);
+                        child.append(`${e.value} - ${e.count}`);
+                        control.appendChild(child);
+                    });
+                    fieldBody.appendChild(control);
+                    field.appendChild(fieldBody);
+                    facets.appendChild(field);
+                }
+
+                for (const result of httpResults.hits) {
                     const element = {...result, ...result._formatted };
                     delete element._formatted;
 
