--- a/meilisearch-http/public/interface.html
+++ b/meilisearch-http/public/interface.html
@@ -201,6 +201,16 @@
                 columnNode.classList.add('column', 'is-4');
                 columnNode.appendChild(fieldNode);
                 apiKeyContainer.appendChild(columnNode);
+
+                apiKey.addEventListener('input', function(e) {
+                    console.log("addEventListener");
+                    localStorage.setItem('apiKey', apiKey.value);
+                    refreshIndexList();
+                }, false);
+
+                if (!apiKey.value) {
+                  apiKey.value = localStorage.getItem('apiKey');
+                }
             }
         }
         
@@ -340,15 +350,6 @@
         };
         lastRequest.send(null);
     }
-
-    if (!apiKey.value) {
-        apiKey.value = localStorage.getItem('apiKey');
-    }
-
-    apiKey.addEventListener('input', function(e) {
-        localStorage.setItem('apiKey', apiKey.value);
-        refreshIndexList();
-    }, false);
 
     let baseUrl = window.location.origin;
     setApiKeyField();
